--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
 }
 
 .App-logo {
-  height: 10rem;
+  height: 3rem;
   pointer-events: none;
 }
 
@@ -36,4 +36,8 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+h4{
+  color: white;
 }
