--- a/src/App.css
+++ b/src/App.css
@@ -1,23 +1,23 @@
 @import '~antd/dist/antd.css';
-
 .App {
   text-align: center;
 }
 
 .App-logo {
+  margin: 6px;
   height: 3rem;
   pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+    animation: App-logo-spin infinite 5s linear;
   }
 }
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  min-height: 10vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -38,6 +38,22 @@
   }
 }
 
-h4{
+h4 {
   color: white;
+}
+
+.minHeight {
+  min-height: 100vh;
+}
+
+#components-layout-demo-fixed .logo {
+  width: 120px;
+  height: 31px;
+  background: rgba(255, 255, 255, 0.2);
+  margin: 16px 24px 16px 0;
+  float: left;
+}
+
+.site-layout .site-layout-background {
+  background: #fff;
 }
